--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ffd",
-  "displayName": "ffd",
+  "displayName": "FFD",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Falconix Frontend Developer Toolkit",
   "author": "tjyuanpeng@gmail.com",
   "license": "MIT",
