fix: displayname lower case

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffd",
-  "displayName": "FFD",
+  "displayName": "ffd",
   "type": "module",
   "version": "1.0.1",
   "description": "Falconix Frontend Developer Toolkit",
