--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
+    "pinia": "^3.0.4",
     "unplugin-vue-components": "^30.0.0",
     "vue": "^3.5.26"
   },
